# Multicam_VINS_IRL

./: README.md
Multicam_VINS/Multi_VINS/: CMakeLists.txt  package.xml
Multicam_VINS/Multi_VINS/config/: mcvio_4camera.rviz
Multicam_VINS/Multi_VINS/config/basler_camera/: cam_A.yaml  cam_B.yaml  cam_C.yaml  cam_D.yaml
Multicam_VINS/Multi_VINS/launch/: Multicam_VINS.launch
Multicam_VINS/Multi_VINS/src/Frontend/: Multicam_VINS_frontend.h  Multicam_VINS_frontend_data.h  imu.h  sensors.h
Multicam_VINS/Multi_VINS/src/Frontend/feature_tracker/: image_processing.h  trackerbase.h
Multicam_VINS/Multi_VINS/src/Frontend/feature_tracker/ORBextractor/: ORBextractor.cc  ORBextractor.h
Multicam_VINS/Multi_VINS/src/utility/: CameraPoseVisualization.h  Twist.h  sophus_utils.hpp  tic_toc.h  utility.h  visualization.h
Multicam_VINS/camera_model/: CMakeLists.txt
